--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/testdb?useSSL=true
 spring.datasource.username=root
-spring.datasource.password=abc123!@
-
+spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
